cmss/main/default/objects/PortfolioManagementC__c/PortfolioManagementC__c.object-meta.xml
<CustomObject>
    <label>Portfolio Management C</label>
    <nameField>
        <displayFormat>PMC-{000000}</displayFormat>
        <label>Portfolio Management C Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Management C</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>