cmss/main/default/objects/PortfolioManagementC__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portfolio Management C</relationshipLabel>
    <relationshipName>PortfolioManagementC</relationshipName>
    <type>Lookup</type>
</CustomField>