cmss/main/default/objects/PortfolioManagementC__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>Created By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>