cmss/main/default/objects/PortfolioManagementC__c/fields/PortfolioManagementImpulse__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManagementImpulse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Management Impulse</label>
    <referenceTo>PortfolioManagementImpulse__c</referenceTo>
    <relationshipLabel>Portfolio Management C</relationshipLabel>
    <relationshipName>PortfolioManagementC</relationshipName>
    <type>Lookup</type>
</CustomField>