cmss/main/default/objects/PortfolioManagementC__c/fields/PortfolioManChangeReason__c.field-meta.xml
<CustomField>
    <fullName>PortfolioManChangeReason__c</fullName>
    <label>Portfolio Management Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>704</fullName>
            </value>
            <value>
                <fullName>707</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>131</fullName>
            </value>
            <value>
                <fullName>133</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>161</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>301</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>401</fullName>
            </value>
            <value>
                <fullName>402</fullName>
            </value>
            <value>
                <fullName>403</fullName>
            </value>
            <value>
                <fullName>404</fullName>
            </value>
            <value>
                <fullName>405</fullName>
            </value>
            <value>
                <fullName>406</fullName>
            </value>
            <value>
                <fullName>407</fullName>
            </value>
            <value>
                <fullName>408</fullName>
            </value>
            <value>
                <fullName>409</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>